--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,10 +1,33 @@
-.masonry {
-  columns: 6 150px;
-  column-gap: .5rem;
+.container {
+  display: flex;
+  flex-flow: column wrap;
+  align-content: space-between;
+  /* Your container needs a fixed height, and it 
+   * needs to be taller than your tallest column. */
+  height: 665px;
 }
-.masonry__item {
-	@apply inline-block w-full m-0 mr-2 mb-2;
-	@apply text-sm;
+
+.item {
+  width: 32.5%;
+}
+
+/* Re-order items into 3 rows */
+.item:nth-child(3n+1) { order: 1; }
+.item:nth-child(3n+2) { order: 2; }
+.item:nth-child(3n)   { order: 3; }
+
+/* Force new columns */
+.container::before,
+.container::after {
+  content: "";
+  flex-basis: 100%;
+  width: 0;
+  order: 2;
+}
+
+.item {
+	@apply m-0 mb-2;
+	@apply font-light leading-relaxed;
 	@apply border rounded-lg p-3;
 	@apply bg-white hover:bg-gray-100;
 }
