--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,33 +1,19 @@
-.container {
+.grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  flex-flow: column wrap;
-  align-content: space-between;
-  /* Your container needs a fixed height, and it 
-   * needs to be taller than your tallest column. */
-  height: 665px;
+  @apply -ml-2; /* gutter size offset */
+  width: auto;
+}
+.grid_column {
+  @apply pl-2; /* gutter size */
+  background-clip: padding-box;
 }
 
-.item {
-  width: 32.5%;
-}
-
-/* Re-order items into 3 rows */
-.item:nth-child(3n+1) { order: 1; }
-.item:nth-child(3n+2) { order: 2; }
-.item:nth-child(3n)   { order: 3; }
-
-/* Force new columns */
-.container::before,
-.container::after {
-  content: "";
-  flex-basis: 100%;
-  width: 0;
-  order: 2;
-}
-
-.item {
-	@apply m-0 mb-2;
-	@apply font-light leading-relaxed;
-	@apply border rounded-lg p-3;
-	@apply bg-white hover:bg-gray-100;
+/* Style your items */
+.grid_column > div { /* change div to reference your elements you put in <Masonry> */
+  @apply m-0 mb-2;
+  @apply font-light leading-relaxed;
+  @apply border rounded-lg p-3;
+  @apply bg-white hover:bg-gray-100;
 }
